--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,20 @@
-@import '~bootstrap/scss/bootstrap'
+@import '~bootstrap/scss/bootstrap';
+
+#sidebar {
+    width: 150px;
+    height: 100vh;
+}
+
+#content {
+    width: calc(100vh - 150px);
+    height: 100vh;
+}
+
+header {
+    height: 75px;
+}
+
+main {
+    height: calc(100% - 75px);
+    margin: 20px 10px;
+}
